# drone-localization

./: .gitignore  DGMD S-17 Final Project Proposal  Dockerfile  Earthfile  README.md  install-homebrew.sh  install-poetry.sh  install-project.sh  install-py-packages.sh  install-pyenv.sh  install.sh  localizer.ipynb  localizer_cv.ipynb  pyproject.toml  requirements.txt  run-notebook.sh  run.sh  tester.py
depth/: requirements.txt  setup.py
depth/depth/: __init__.py  cli.py  depth.py  test.py
depth/src/: depth.py
detection/: requirements.txt  setup.py
detection/detection/: cli.py  detection.py
localizer/: install.sh  requirements.txt  setup.py
localizer/TelloPy/tellopy/_internal/: tello.py
localizer/localizer/: cli.py
localizer/src/: cli.py  detection.py  tello.py
tello/: requirements.txt  setup.py
tello/src/: tello.py
tello/tello/: cli.py  tello.py  test.py
