[tool.poetry]
name = "drone-localization"
version = "0.1.0"
description = ""
authors = ["John Ward <john@itsjohnward.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "*"
h264decoder = {path = "./h264decoder", develop = true}
localizer = {path = "./localizer", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
