[tool.poetry]
name = "drone-localization"
version = "0.1.0"
description = ""
authors = ["John Ward <john@itsjohnward.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "*"
scipy = { url = "https://pypi.anaconda.org/scipy-wheels-nightly/simple/scipy/1.10.0.dev0%2B1406.d132ca3/scipy-1.10.0.dev0%2B1406.d132ca3-cp39-cp39-macosx_12_0_arm64.whl", markers = "platform_machine == 'aarch64'" }
localizer = {path = "./localizer", develop = true}
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
